--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.0.28",
     "moment": "^2.30.1",
