--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.0.28",
     "moment": "^2.30.1",
